backend/security-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: security-service
  labels:
    app: security-service
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
    prometheus.io/path: "/api/metrics"
spec:
  type: ClusterIP
  selector:
    app: security-service
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
  sessionAffinity: None
